# calendar2discord

./: .env.example  .gitignore  Cargo.toml  config.json.example
src/: calendar.rs  commands.rs  config.rs  connection.rs  discord.rs  lib.rs  main.rs  mapping.rs  models.rs  status.rs  util.rs
