[package]
name = "calendar2discord"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", default-features = false }
icalendar = { version = "0.17.3", default-features = false, features = ["parser"]}
reqwest = { version = "0.12.23", default-features = false, features = ["default-tls"]}
serde_json = { version = "1.0.143", default-features = false, features = ["std"]}
tokio = { version = "1.47.1", default-features = false, features = ["macros", "rt-multi-thread"]}
