[package]
name = "calendar2discord"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", default-features = false }
dotenvy = { version = "0.15.7", default-features = false }
icalendar = { version = "0.17.3", default-features = false, features = ["parser"] }
poise = { version = "0.6.1", default-features = false }
reqwest = { version = "0.12.23", default-features = false, features = ["default-tls"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.143", default-features = false, features = ["std"] }
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.47.1", default-features = false, features = ["macros", "rt-multi-thread"] }
